# Wry.NET

./: .gitignore  LICENSE  README.md  dotnet.slnx
.github/workflows/: build.yml
docs/: README.md
samples/: dev.targets
samples/BridgeApp/: BridgeApp.csproj  Program.cs
samples/HelloWorld/: HelloWorld.csproj  Program.cs
samples/TrayApp/: Program.cs  TrayApp.csproj
src/Wry.Bridge/: BridgeAttributes.cs  DiskAssetServer.cs  EmbeddedAssetServer.cs  README.md  Wry.Bridge.csproj  WryBridge.cs  WryBridgeExtensions.cs  WryWindowExtensions.cs
src/Wry.Bridge.Generator/: AssemblyLoader.cs  CodeEmitter.cs  DataModels.cs  ModelCollector.cs  Program.cs  ServiceDiscovery.cs  StringHelpers.cs  TypeMapper.cs  Wry.Bridge.Generator.csproj
src/Wry.NET/: NativeMethods.cs  README.md  Types.cs  Wry.NET.csproj  WryApp.cs  WryDialog.cs  WryTrayIcon.cs  WryTrayMenu.cs  WryWindow.cs  WryWindowCreateOptions.cs
src/Wry.NET.Bridge/: BridgeAttributes.cs  CallContext.cs  DiskAssetServer.cs  EmbeddedAssetServer.cs  README.md  Wry.NET.Bridge.csproj  WryBridge.cs  WryBridgeExtensions.cs  WryWindowExtensions.cs
src/Wry.NET.Bridge.Generator/: AssemblyLoader.cs  CodeEmitter.cs  DataModels.cs  ModelCollector.cs  Program.cs  ServiceDiscovery.cs  StringHelpers.cs  TypeMapper.cs  Wry.NET.Bridge.Generator.csproj
src/wry-native/: Cargo.toml  api-coverage.md
src/wry-native/.cargo/: config.toml
src/wry-native/src/: dialog.rs  lib.rs  tray.rs
tests/Wry.Bridge.Generator.Tests/: CodeGenerationTests.cs  DiscoveryTests.cs  EndToEndTests.cs  HelperTests.cs  ModelCollectionTests.cs  (+3 more)
(+38 files in other folders)
